public class bicycle extends  Vehicle
{
    @Override
    public String start()
    {
        return "the bicycle is starting";
    }
    @Override
    public String stop()
    {
        return "the bicycle is stop";
    }
    @Override
    public String accelerate()
    {
        return "the bicycle is accelerate" ;
    }

}
