public class car extends  Vehicle
{
    @Override
   public String start()
   {
       return "the car is starting";
   }
    @Override
    public String stop()
    {
        return "the car is stop";
    }
    @Override
    public String accelerate()
    {
        return "the car is accelerate" ;
    }

}
