public class motorcycle extends  Vehicle
{
    @Override
    public String start()
    {
        return "the motorcycle is starting";
    }
    @Override
    public String stop()
    {
        return "the motorcycle is stop";
    }
    @Override
    public String accelerate()
    {
        return "the motorcycle is accelerate" ;
    }

}
