@startuml
class motorcycle {
+ String start()
+ String stop()
+ String accelerate()
}
class car {
+ String start()
+ String stop()
+ String accelerate()
}
class bicycle {
+ String start()
+ String stop()
+ String accelerate()
}



Vehicle <|-- motorcycle
Vehicle <|-- car
Vehicle <|-- bicycle

@enduml